[package]
name = "RustDomoUploader"
version = "0.1.0"
authors = ["Dave Smith <dave@sophoservices.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domo = "^0.2.3"
toml = "0.5"
serde = { version="^1", features=["derive"] }
rust_active_campaign = { git="https://github.com/DaveSophoServices/RustActiveCampaign", branch="main"}